--- a/app/src/template.html
+++ b/app/src/template.html
@@ -7,24 +7,26 @@
 
   %sapper.base%
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+
   <!-- Sapper creates a <script> tag containing `src/client.js`
-    and anything else it needs to hydrate the app and
-    initialise the router -->
+       and anything else it needs to hydrate the app and
+       initialise the router -->
   %sapper.scripts%
 
   <!-- Sapper generates a <style> tag containing critical CSS
-    for the current page. CSS for the rest of the app is
-    lazily loaded when it precaches secondary pages -->
+       for the current page. CSS for the rest of the app is
+       lazily loaded when it precaches secondary pages -->
   %sapper.styles%
 
   <!-- This contains the contents of the <svelte:head> component, if
-    the current page has one -->
+       the current page has one -->
   %sapper.head%
 </head>
 
 <body>
   <!-- The application will be rendered inside this element,
-    because `src/client.js` references it -->
+       because `src/client.js` references it -->
   <div id="sapper">%sapper.html%</div>
 </body>
 
